--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <video width="1920" height="1080" autoplay loop>
-    <source src="Starting.mp4" type="video/mp4">
+    <source src="startingNEW.mp4" type="video/mp4">
     Browser Anda tidak mendukung video tag.
 </video>
 
